# HAICL

./: CMakeLists.txt  HAICL (Hitmux AI in Command Line).md  README.md
include/: CLIParser.h  ConfigManager.h  GoogleAIModel.h  HistoryManager.h  HttpClient.h  IAIModel.h  OpenAIModel.h  TerminalBeautifier.h
src/: CLIParser.cpp  ConfigManager.cpp  GoogleAIModel.cpp  HistoryManager.cpp  HttpClient.cpp  OpenAIModel.cpp  TerminalBeautifier.cpp  main.cpp
